%% Ajustado para alto contraste e fontes maiores
%%{init: {'theme': 'base', 'themeVariables': { 'background': '#ffffff', 'primaryColor': '#ffffff', 'primaryBorderColor': '#000000', 'lineColor': '#000000', 'edgeLabelBackground': '#ffffff', 'tertiaryColor': '#ffffff', 'textColor': '#000000', 'fontSize': '14px'}}}%%
classDiagram
    direction TB

    %% estilos globais para caixas e texto
    classDef default fill:#ffffff,stroke:#000000,stroke-width:2px,color:#000000,font-size:14px;

    class Paciente {
        +int codigo
        +string nome
        +string nomeMae
        +date dataNasc
        +string telefone
        +string email
    }
    class Medico {
        +int crm
        +string nome
        +string especialidade
    }
    class EspecialidadeMedica {
        +int codEspecialidade
        +string nome
        +string descricao
    }
    class MedicoEspecialidade {
        +int crm
        +int codEspecialidade
        +string modalidade
    }
    class AgendaAtendimento {
        +int codAgenda
        +int crm
        +int codEspecialidade
        +date data
        +time horario
        +bool disponivel
    }
    class Consulta {
        +int codConsulta
        +int codPaciente
        +int crm
        +int codEspecialidade
        +date data
        +time horario
        +string modalidade
        +string status
    }
    class PlanoSaude {
        +int codPlano
        +string nome
        +string operadora
    }
    class ListaEspera {
        +int id
        +int codPaciente
        +int crm
        +int codEspecialidade
        +datetime dataInclusao
        +int posicaoFila
    }

    %% relações (rótulos curtos ajudam a não sobrepor)
    Paciente "1" --> "*" Consulta : tem
    Medico "1" --> "*" Consulta : realiza
    Medico "1" --> "*" MedicoEspecialidade : possui
    EspecialidadeMedica "1" --> "*" MedicoEspecialidade : categoriza
    Medico "1" --> "*" AgendaAtendimento : tem agenda
    Paciente "1" --> "*" ListaEspera : entra em
    Medico "1" --> "*" ListaEspera : preferido em
